--- a/src/main/content/_config.yml
+++ b/src/main/content/_config.yml
@@ -7,6 +7,12 @@ url: "https://openliberty.io"
 twitter_username: openlibertyio
 github_username:  NottyCode
 
+defaults:
+  - scope:
+      path: "config"
+    values:
+      page-layout: "config"
+
 asciidoctor:
   base_dir: :docdir
   safe: 0
@@ -15,6 +21,7 @@ asciidoctor:
     - source-highlighter=coderay
     - coderay-css=class
     - allow-uri-read
+    - page-layout=config # for config testing only - to be removed once a front matter page is created for each config doc
 
 google_tag_manager: GTM-TKP3KJ7
 #google_analytics: UA-104349928-1
@@ -23,11 +30,11 @@ markdown: kramdown
 
 assets:
   compress:
-    css: true
-    js: true
+    css: false
+    js: false
 
 env: production
-minify_html: true
+minify_html: false
 
 plugins:
   - jekyll-feed
@@ -38,4 +45,3 @@ exclude:
   - Gemfile
   - Gemfile.lock
   - vendor # TravisCI bundles all gems in the vendor directory on its build servers, which Jekyll will mistakenly read and explode on.
-  
